--- a/index.html
+++ b/index.html
@@ -4,6 +4,46 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="styles/principal.css" />
+    <script src="script.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <nav class="navbar">
+      <div class="logo">
+        <img
+          src="images/Logo - LeftCalculator.png"
+          alt="Logo"
+          class="logo-img"
+        />
+      </div>
+
+      <label class="menu-toggle">
+        <span></span>
+        <span></span>
+        <span></span>
+      </label>
+
+      <ul class="menu">
+        <li><a href="#">Ferramentas</a></li>
+        <li><a href="#">Conversor</a></li>
+        <li><a href="#">Calculadoras</a></li>
+        <li><a href="#">Sobre</a></li>
+        <li><a href="#">Perfil</a></li>
+      </ul>
+    </nav>
+
+    <div class="container">
+      <h1>Bem-vindo ao LeftCalculator</h1>
+      <p>
+        Sua calculadora online confiável para todas as suas necessidades
+        matemáticas.
+      </p>
+      <a href="#" class="btn">Comece Agora</a>
+    </div>
+
+    <footer class="footer">
+      <p>© 2024 LeftCalculator. Todos os direitos reservados.</p>
+      <p>Desenvolvido por LeftCalculator Team.</p>
+    </footer>
+  </body>
 </html>
