--- a/index.html
+++ b/index.html
@@ -10,40 +10,272 @@
   <body>
     <nav class="navbar">
       <div class="logo">
-        <img
-          src="images/Logo - LeftCalculator.png"
-          alt="Logo"
-          class="logo-img"
-        />
+        <a href="../index.html">
+          <img
+            src="images/d76b9ee5-c96d-4de7-bcad-0da6e120a6b1.png"
+            alt="Logo"
+            class="logo-img"
+          />
+        </a>
       </div>
 
-      <label class="menu-toggle">
-        <span></span>
-        <span></span>
-        <span></span>
-      </label>
+      <div class="menu">
+        <div class="dropdown">
+          <button class="dropbtn">
+            <img src="images/book_.png" alt="livro" class="icon" />
+            Guia de Estudos
+            <i class="fa fa-caret-down"></i>
+          </button>
+          <div class="dropdown-content">
+            <a href="#">Guia de Estudos</a>
+          </div>
+        </div>
 
-      <ul class="menu">
-        <li><a href="#">Ferramentas</a></li>
-        <li><a href="#">Conversor</a></li>
-        <li><a href="#">Calculadoras</a></li>
-        <li><a href="#">Sobre</a></li>
-        <li><a href="#">Perfil</a></li>
-      </ul>
+        <div class="dropdown">
+          <button class="dropbtn">
+            <img
+              src="images/two-way-arrows-line_.png"
+              alt="setas"
+              class="icon"
+            />
+            Conversor
+            <i class="fa fa-caret-down"></i>
+          </button>
+          <div class="dropdown-content">
+            <a href="#">Tempo</a>
+            <a href="#">Velocidade</a>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropbtn">
+            <img src="images/calculator_.png" alt="calculadora" class="icon" />
+            Calculadora
+            <i class="fa fa-caret-down"></i>
+          </button>
+          <div class="dropdown-content">
+            <a href="#">Programador</a>
+            <a href="#">Científica</a>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropbtn">
+            <img src="images/profile-circle_.png" alt="usuário" class="icon" />
+            Perfil
+            <i class="fa fa-caret-down"></i>
+          </button>
+          <div class="dropdown-content">
+            <a href="/navBarPages/admin.html">Admin</a>
+            <a href="login-signup/cadastro.html">Sair</a>
+          </div>
+        </div>
+
+        <div>
+          <a href="navBarPages/about.html">Sobre</a>
+        </div>
+      </div>
     </nav>
 
-    <div class="container">
+    <section class="features">
       <h1>Bem-vindo ao LeftCalculator</h1>
       <p>
         Sua calculadora online confiável para todas as suas necessidades
         matemáticas.
       </p>
-      <a href="#" class="btn">Comece Agora</a>
-    </div>
+
+      <div class="features-container">
+        <div class="feature-card">
+          <img src="images/calculator-circle_.png" alt="Calculadora" />
+          <h2>Calculadora Científica</h2>
+          <p>Aqui você pode realizar cálculos científicos avançados.</p>
+          <button onclick="window.location.href='navBarPages/calculadora.html'">
+            Acessar Calculadora Científica
+          </button>
+        </div>
+
+        <div class="feature-card">
+          <img src="images/convertio_.png" alt="Conversor" />
+          <h2>Conversor de Unidades</h2>
+          <p>Converta entre diferentes unidades de medida facilmente.</p>
+          <button onclick="window.location.href='navBarPages/conversor.html'">
+            Acessar Conversor de Unidades
+          </button>
+        </div>
+
+        <div class="feature-card">
+          <img src="images/book-circle_.png" alt="Guia de Estudos" />
+          <h2>Guia de Estudos</h2>
+          <p>
+            Encontre recursos e materiais para ajudar em seus estudos
+            matemáticos.
+          </p>
+          <button onclick="window.location.href='navBarPages/guia.html'">
+            Acessar Guia de Estudos
+          </button>
+        </div>
+      </div>
+    </section>
+
+    <section id="about-leafcalculator" class="about">
+      <h2>Tudo sobre o LeafCalculator</h2>
+      <p>
+        O LeafCalculator foi criado para facilitar seus estudos e cálculos
+        matemáticos. Ele reúne diversas ferramentas em um só lugar desde uma
+        calculadora científica poderosa até um guia completo de estudos e
+        conversores práticos. O objetivo é simples: ajudar você a aprender,
+        entender e aplicar a matemática de forma eficiente.
+      </p>
+
+      <div class="topic">
+        <img src="images/calculadorImage.jpg" alt="Calculadora Científica" />
+        <div class="texto">
+          <h3>Calculadora Científica</h3>
+          <p>
+            A Calculadora Científica do LeafCalculator vai muito além das
+            operações básicas. Ela permite trabalhar com funções
+            trigonométricas, logaritmos, potências e expressões complexas, tudo
+            de forma rápida e intuitiva. Ideal para estudantes de ensino médio,
+            técnico ou superior.
+          </p>
+        </div>
+      </div>
+
+      <div class="topic">
+        <img
+          src="images/guiaEstudosImage.webp"
+          alt="Guia de Estudos de Matemática"
+        />
+        <div class="texto">
+          <h3>Guia de Estudos de Matemática (do Básico ao Avançado)</h3>
+          <p>
+            O Guia de Estudos foi pensado para quem quer aprender ou revisar
+            matemática passo a passo. Comece com operações fundamentais e avance
+            até tópicos mais complexos como cálculo e estatística. Cada seção
+            vem com exemplos práticos, explicações claras e exercícios
+            interativos.
+          </p>
+        </div>
+      </div>
+
+      <div class="topic">
+        <img src="images/conversorImage.jpg" alt="Conversor Matemático" />
+        <div class="texto">
+          <h3>Conversor Matemático</h3>
+          <p>
+            O Conversor do LeafCalculator permite transformar rapidamente
+            unidades, ângulos, medidas e valores. Seja convertendo graus em
+            radianos ou metros em centímetros, a ferramenta economiza tempo e
+            reduz erros.
+          </p>
+        </div>
+      </div>
+
+      <div class="reason">
+        <h3>Por que usar o LeafCalculator?</h3>
+        <p>
+          Diferente de outros sites ou aplicativos, o LeafCalculator foi
+          desenvolvido com foco na experiência do usuário e no aprendizado. Você
+          não apenas obtém resultados, mas entende o raciocínio por trás deles.
+          Com um design leve, intuitivo e acessível de qualquer dispositivo, o
+          LeafCalculator é o seu aliado para dominar a matemática de forma
+          completa.
+        </p>
+      </div>
+    </section>
+
+    <section id="inspiration" class="inspiration">
+      <div class="container">
+        <div class="inspiration-imagem">
+          <img src="/images/SymbolabImage.png" alt="Inspiração: Symbolab" />
+        </div>
+        <div class="inspiration-texto">
+          <h2>Inspirado pelo Symbolab</h2>
+          <p>
+            O LeafCalculator nasceu da admiração pelo Symbolab. Ao explorar seu
+            solucionador inteligente de matemática, com passos explicados,
+            interface limpa e atenção ao aprendizado, senti que poderia trazer
+            algo no mesmo espírito, mas com identidade própria.
+          </p>
+          <p>
+            A inspiração está nos detalhes: mostrar o caminho, não apenas o
+            resultado; tornar o cálculo acessível; guiar o estudante com clareza
+            e simplicidade. O LeafCalculator busca carregar essa luz adiante,
+            trazendo ferramentas personalizadas com o mesmo foco no aprendizado
+            adaptadas ao seu estilo.
+          </p>
+          <a
+            href="https://pt.symbolab.com"
+            target="_blank"
+            rel="noopener noreferrer"
+            class="btn-extern"
+          >
+            Visitar Symbolab
+          </a>
+        </div>
+      </div>
+    </section>
 
     <footer class="footer">
-      <p>© 2024 LeftCalculator. Todos os direitos reservados.</p>
-      <p>Desenvolvido por LeftCalculator Team.</p>
+      <div class="footer-container">
+        <div class="footer-section">
+          <img
+            src="images/d76b9ee5-c96d-4de7-bcad-0da6e120a6b1.png"
+            alt="Logo"
+            class="logo-img"
+          />
+          <p><strong>Whatsapp:</strong> (65) 98518-0521</p>
+          <p><strong>Email:</strong> suporte@leftcalculator.com</p>
+          <div class="social-icons">
+            <a href="#"
+              ><img src="../images/instagram-circle_.png" alt="Instagram"
+            /></a>
+            <a href="#"
+              ><img src="../images/youtube-with-circle_.png" alt="YouTube"
+            /></a>
+            <a href="#"><img src="../images/facebook_.png" alt="Facebook" /></a>
+          </div>
+        </div>
+
+        <div class="footer-section">
+          <h4>LINKS IMPORTANTES</h4>
+          <ul>
+            <li>
+              <a href="https://github.com/aqu1no1" target="_blank">GitHub</a>
+            </li>
+            <li>
+              <a
+                href="https://www.linkedin.com/in/mauricio-aquino-b426a9265"
+                target="_blank"
+                >LinkedIn</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://github.com/aqu1no1/Projeto-FrontEnd-ES-"
+                target="_blank"
+                >GitHub do Projeto</a
+              >
+            </li>
+          </ul>
+        </div>
+
+        <div class="footer-section">
+          <h4>MENU PRINCIPAL</h4>
+          <ul>
+            <li><a href="../index.html">Página Inicial</a></li>
+            <li><a href="#">Conversor</a></li>
+            <li><a href="#">Calculadora</a></li>
+            <li><a href="#">Perfil</a></li>
+            <li><a href="about.html">Sobre Nós</a></li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="footer-bottom">
+        <p>© 2024 LeftCalculator | Todos os direitos reservados</p>
+        <p>Desenvolvido por <strong>LeftCalculator Team</strong></p>
+      </div>
     </footer>
   </body>
 </html>
