--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Pagina Principal</title>
+    <link rel="shortcut icon" href="/images/logo.png" type="image/x-icon" />
     <link rel="stylesheet" href="styles/principal.css" />
     <script src="script.js" defer></script>
   </head>
@@ -27,7 +28,7 @@
             <i class="fa fa-caret-down"></i>
           </button>
           <div class="dropdown-content">
-            <a href="#">Guia de Estudos</a>
+            <a href="/navBarPages/guideStudy.html">Guia de Estudos</a>
           </div>
         </div>
 
@@ -42,7 +43,7 @@
             <i class="fa fa-caret-down"></i>
           </button>
           <div class="dropdown-content">
-            <a href="#">Velocidade</a>
+            <a href="/navBarPages/conversor.html">Velocidade</a>
           </div>
         </div>
 
@@ -53,7 +54,7 @@
             <i class="fa fa-caret-down"></i>
           </button>
           <div class="dropdown-content">
-            <a href="#">Científica</a>
+            <a href="/navBarPages/calculator.html">Científica</a>
           </div>
         </div>
 
@@ -87,7 +88,7 @@
           <img src="images/calculator-circle_.png" alt="Calculadora" />
           <h2>Calculadora Científica</h2>
           <p>Aqui você pode realizar cálculos científicos avançados.</p>
-          <button onclick="window.location.href='navBarPages/calculadora.html'">
+          <button onclick="window.location.href='navBarPages/calculator.html'">
             Acessar Calculadora Científica
           </button>
         </div>
@@ -108,7 +109,7 @@
             Encontre recursos e materiais para ajudar em seus estudos
             matemáticos.
           </p>
-          <button onclick="window.location.href='navBarPages/guia.html'">
+          <button onclick="window.location.href='navBarPages/guideStudy.html'">
             Acessar Guia de Estudos
           </button>
         </div>
@@ -262,9 +263,9 @@
           <h4>MENU PRINCIPAL</h4>
           <ul>
             <li><a href="../index.html">Página Inicial</a></li>
-            <li><a href="#">Conversor</a></li>
-            <li><a href="#">Calculadora</a></li>
-            <li><a href="#">Perfil</a></li>
+            <li><a href="conversor.html">Conversor</a></li>
+            <li><a href="calculator.html">Calculadora</a></li>
+            <li><a href="guideStudy.html">Guia de Estudos</a></li>
             <li><a href="about.html">Sobre Nós</a></li>
           </ul>
         </div>
