--- a/login-signup/cadastro.html
+++ b/login-signup/cadastro.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Cadastro</title>
+    <link rel="shortcut icon" href="/images/logo.png" type="image/x-icon" />
     <link rel="stylesheet" href="../styles/cadastro.css" />
     <script src="/script.js" defer></script>
   </head>
@@ -83,12 +84,7 @@
               <input type="email" placeholder="Email" required />
             </div>
             <div class="field">
-              <input
-                type="tel"
-                placeholder="Telefone"
-                required
-                pattern="\(\d{2}\)\s?\d{4,5}-\d{4}"
-              />
+              <input type="tel" placeholder="Telefone" required />
             </div>
             <div class="field">
               <input type="password" placeholder="Senha" required />
