--- a/navBarPages/conversor.html
+++ b/navBarPages/conversor.html
@@ -3,11 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pagina Admin</title>
+    <title>Conversor</title>
     <link rel="shortcut icon" href="/images/logo.png" type="image/x-icon" />
-
-    <link rel="stylesheet" href="../styles/admin.css" />
-    <script src="/admin.js" defer></script>
+    <link rel="stylesheet" href="../styles/converter.css" />
+    <script src="../script.js" defer></script>
   </head>
   <body>
     <nav class="navbar">
@@ -29,7 +28,7 @@
             <i class="fa fa-caret-down"></i>
           </button>
           <div class="dropdown-content">
-            <a href="#">Guia de Estudos</a>
+            <a href="/navBarPages/guideStudy.html">Guia de Estudos</a>
           </div>
         </div>
 
@@ -44,7 +43,7 @@
             <i class="fa fa-caret-down"></i>
           </button>
           <div class="dropdown-content">
-            <a href="#">Velocidade</a>
+            <a href="/navBarPages/conversor.html">Velocidade</a>
           </div>
         </div>
 
@@ -67,69 +66,32 @@
           </button>
           <div class="dropdown-content">
             <a href="/navBarPages/admin.html">Admin</a>
-            <a href="/login-signup/cadastro.html">Sair</a>
+            <a href="login-signup/cadastro.html">Sair</a>
           </div>
         </div>
 
         <div>
-          <a href="/navBarPages/about.html">Sobre</a>
+          <a href="navBarPages/about.html">Sobre</a>
         </div>
       </div>
     </nav>
 
-    <section class="admin-section">
-      <h1>Bem-vindo à Página de Administração</h1>
-      <p>
-        Esta é a área de administração do sistema, onde é possível cadastrar
-        novos usuários informando o nome e o e-mail. Os dados cadastrados são
-        salvos no Local Storage e exibidos logo abaixo do formulário, junto com
-        a data de envio. Além disso, nesta página você pode pesquisar usuários,
-        limpar os campos do formulário, excluir um item específico ou remover
-        todos os registros da lista. Todo o layout segue o mesmo padrão de
-        estilo da página principal.
-      </p>
+    <div class="converter">
+      <h2>Conversor de Velocidade</h2>
 
-      <div class="signup-form">
-        <h2>Adicionar Novo Usuário</h2>
-        <form id="userForm">
-          <label for="username">Nome de Usuário:</label>
-          <input type="text" id="username" name="username" required />
+      <label for="tipoConversao">Selecione o tipo de conversão:</label>
+      <select id="tipoConversao">
+        <option value="msToKmh">m/s → km/h</option>
+        <option value="kmhToMs">km/h → m/s</option>
+      </select>
 
-          <label for="email">Email:</label>
-          <input type="email" id="email" name="email" required />
-          <div class="form-buttons">
-            <button type="submit">Adicionar Usuário</button>
-            <button type="button" id="clearFields">Limpar</button>
-          </div>
-        </form>
-      </div>
+      <label for="valor">Digite o valor:</label>
+      <input type="number" id="valor" placeholder="Ex: 10" />
 
-      <div class="user-controls">
-        <h2>Gerenciar Usuários</h2>
-        <input
-          type="text"
-          id="search"
-          placeholder="Pesquisar por nome ou email..."
-        />
-        <button id="deleteAll">Excluir Todos</button>
-      </div>
+      <button onclick="converterVelocidade()">Converter</button>
 
-      <div class="user-list">
-        <h2>Lista de Usuários</h2>
-
-        <table id="userTable">
-          <thead>
-            <tr>
-              <th>Nome de Usuário</th>
-              <th>Email</th>
-              <th>Data de Cadastro</th>
-              <th>Ações</th>
-            </tr>
-          </thead>
-          <tbody id="userTableBody"></tbody>
-        </table>
-      </div>
-    </section>
+      <p id="resultado"></p>
+    </div>
 
     <footer class="footer">
       <div class="footer-container">
@@ -179,9 +141,9 @@
           <h4>MENU PRINCIPAL</h4>
           <ul>
             <li><a href="../index.html">Página Inicial</a></li>
-            <li><a href="#">Conversor</a></li>
-            <li><a href="#">Calculadora</a></li>
-            <li><a href="#">Perfil</a></li>
+            <li><a href="conversor.html">Conversor</a></li>
+            <li><a href="calculator.html">Calculadora</a></li>
+            <li><a href="guideStudy.html">Guia de Estudos</a></li>
             <li><a href="about.html">Sobre Nós</a></li>
           </ul>
         </div>
