--- a/navBarPages/about.html
+++ b/navBarPages/about.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Sobre</title>
+    <link rel="shortcut icon" href="/images/logo.png" type="image/x-icon" />
+
     <link rel="stylesheet" href="../styles/aboute.css" />
 
     <script src="script.js" defer></script>
@@ -58,7 +60,7 @@
             <i class="fa fa-caret-down"></i>
           </button>
           <div class="dropdown-content">
-            <a href="#">Científica</a>
+            <a href="/navBarPages/calculator.html">Científica</a>
           </div>
         </div>
 
@@ -185,9 +187,9 @@
           <h4>MENU PRINCIPAL</h4>
           <ul>
             <li><a href="../index.html">Página Inicial</a></li>
-            <li><a href="#">Conversor</a></li>
-            <li><a href="#">Calculadora</a></li>
-            <li><a href="#">Perfil</a></li>
+            <li><a href="conversor.html">Conversor</a></li>
+            <li><a href="calculator.html">Calculadora</a></li>
+            <li><a href="guideStudy.html">Guia de Estudos</a></li>
             <li><a href="about.html">Sobre Nós</a></li>
           </ul>
         </div>
