--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <i class="fa fa-caret-down"></i>
           </button>
           <div class="dropdown-content">
-            <a href="/navBarPages/calculator.html">Científica</a>
+            <a href="/navBarPages/calculator.html">Simples</a>
           </div>
         </div>
 
@@ -86,10 +86,10 @@
       <div class="features-container">
         <div class="feature-card">
           <img src="images/calculator-circle_.png" alt="Calculadora" />
-          <h2>Calculadora Científica</h2>
-          <p>Aqui você pode realizar cálculos científicos avançados.</p>
+          <h2>Calculadora Simples</h2>
+          <p>Aqui você pode realizar cálculos simples.</p>
           <button onclick="window.location.href='navBarPages/calculator.html'">
-            Acessar Calculadora Científica
+            Acessar Calculadora Simples
           </button>
         </div>
 
@@ -121,21 +121,21 @@
       <p>
         O LeafCalculator foi criado para facilitar seus estudos e cálculos
         matemáticos. Ele reúne diversas ferramentas em um só lugar desde uma
-        calculadora científica poderosa até um guia completo de estudos e
+        calculadora simples poderosa até um guia completo de estudos e
         conversores práticos. O objetivo é simples: ajudar você a aprender,
         entender e aplicar a matemática de forma eficiente.
       </p>
 
       <div class="topic">
-        <img src="images/calculadorImage.jpg" alt="Calculadora Científica" />
+        <img src="images/calculadorImage.jpg" alt="Calculadora Simples" />
         <div class="texto">
-          <h3>Calculadora Científica</h3>
+          <h3>Calculadora Simples</h3>
           <p>
-            A Calculadora Científica do LeafCalculator vai muito além das
-            operações básicas. Ela permite trabalhar com funções
-            trigonométricas, logaritmos, potências e expressões complexas, tudo
-            de forma rápida e intuitiva. Ideal para estudantes de ensino médio,
-            técnico ou superior.
+            A Calculadora do LeafCalculator foi criada para ser prática e
+            direta. Com ela, você realiza operações básicas como adição,
+            subtração, multiplicação e divisão de forma rápida e precisa. Ideal
+            para o dia a dia, estudos e cálculos simples, perfeita para quem
+            busca agilidade e facilidade sem complicação.
           </p>
         </div>
       </div>
