--- a/navBarPages/admin.html
+++ b/navBarPages/admin.html
@@ -55,7 +55,7 @@
             <i class="fa fa-caret-down"></i>
           </button>
           <div class="dropdown-content">
-            <a href="/navBarPages/calculator.html">Científica</a>
+            <a href="/navBarPages/calculator.html">Simples</a>
           </div>
         </div>
 
