--- a/navBarPages/guideStudy.html
+++ b/navBarPages/guideStudy.html
@@ -55,7 +55,7 @@
             <i class="fa fa-caret-down"></i>
           </button>
           <div class="dropdown-content">
-            <a href="#">Científica</a>
+            <a href="#">Simples</a>
           </div>
         </div>
 
