--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="logo">
         <a href="../index.html">
           <img
-            src="images/d76b9ee5-c96d-4de7-bcad-0da6e120a6b1.png"
+            src="/images/d76b9ee5-c96d-4de7-bcad-0da6e120a6b1.png"
             alt="Logo"
             class="logo-img"
           />
@@ -49,7 +49,7 @@
 
         <div class="dropdown">
           <button class="dropbtn">
-            <img src="images/calculator_.png" alt="calculadora" class="icon" />
+            <img src="/images/calculator_.png" alt="calculadora" class="icon" />
             Calculadora
             <i class="fa fa-caret-down"></i>
           </button>
@@ -60,18 +60,18 @@
 
         <div class="dropdown">
           <button class="dropbtn">
-            <img src="images/profile-circle_.png" alt="usuário" class="icon" />
+            <img src="/images/profile-circle_.png" alt="usuário" class="icon" />
             Perfil
             <i class="fa fa-caret-down"></i>
           </button>
           <div class="dropdown-content">
             <a href="/navBarPages/admin.html">Admin</a>
-            <a href="login-signup/cadastro.html">Sair</a>
+            <a href="/login-signup/cadastro.html">Sair</a>
           </div>
         </div>
 
         <div>
-          <a href="navBarPages/about.html">Sobre</a>
+          <a href="/navBarPages/about.html">Sobre</a>
         </div>
       </div>
     </nav>
@@ -94,7 +94,7 @@
         </div>
 
         <div class="feature-card">
-          <img src="images/convertio_.png" alt="Conversor" />
+          <img src="/images/convertio_.png" alt="Conversor" />
           <h2>Conversor de Unidades</h2>
           <p>Converta entre diferentes unidades de medida facilmente.</p>
           <button onclick="window.location.href='navBarPages/conversor.html'">
@@ -103,7 +103,7 @@
         </div>
 
         <div class="feature-card">
-          <img src="images/book-circle_.png" alt="Guia de Estudos" />
+          <img src="/images/book-circle_.png" alt="Guia de Estudos" />
           <h2>Guia de Estudos</h2>
           <p>
             Encontre recursos e materiais para ajudar em seus estudos
@@ -127,7 +127,7 @@
       </p>
 
       <div class="topic">
-        <img src="images/calculadorImage.jpg" alt="Calculadora Simples" />
+        <img src="/images/calculadorImage.jpg" alt="Calculadora Simples" />
         <div class="texto">
           <h3>Calculadora Simples</h3>
           <p>
@@ -142,7 +142,7 @@
 
       <div class="topic">
         <img
-          src="images/guiaEstudosImage.webp"
+          src="/images/guiaEstudosImage.webp"
           alt="Guia de Estudos de Matemática"
         />
         <div class="texto">
@@ -158,7 +158,7 @@
       </div>
 
       <div class="topic">
-        <img src="images/conversorImage.jpg" alt="Conversor Matemático" />
+        <img src="/images/conversorImage.jpg" alt="Conversor Matemático" />
         <div class="texto">
           <h3>Conversor Matemático</h3>
           <p>
@@ -219,7 +219,7 @@
       <div class="footer-container">
         <div class="footer-section">
           <img
-            src="images/d76b9ee5-c96d-4de7-bcad-0da6e120a6b1.png"
+            src="/images/d76b9ee5-c96d-4de7-bcad-0da6e120a6b1.png"
             alt="Logo"
             class="logo-img"
           />
@@ -263,10 +263,10 @@
           <h4>MENU PRINCIPAL</h4>
           <ul>
             <li><a href="../index.html">Página Inicial</a></li>
-            <li><a href="conversor.html">Conversor</a></li>
-            <li><a href="calculator.html">Calculadora</a></li>
-            <li><a href="guideStudy.html">Guia de Estudos</a></li>
-            <li><a href="about.html">Sobre Nós</a></li>
+            <li><a href="/navBarPages/conversor.html">Conversor</a></li>
+            <li><a href="/navBarPages/calculator.html">Calculadora</a></li>
+            <li><a href="/navBarPages/guideStudy.html">Guia de Estudos</a></li>
+            <li><a href="/navBarPages/about.html">Sobre Nós</a></li>
           </ul>
         </div>
       </div>
