--- a/login-signup/cadastro.html
+++ b/login-signup/cadastro.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="logo">
-      <a href="index.html"><img src="/images/logo.png" alt="Logo" /></a>
+      <a href="../index.html"><img src="/images/logo.png" alt="Logo" /></a>
     </div>
 
     <div class="Formulario">
